# labautomake

./: Makefile.am  README  configure.ac
inc/: Makefile.am  hello-lib.h
lib/: Makefile.am  hello-lib.c
src/: Makefile.am
src/hello/: hello.c
src/hellolib/: Makefile.am  hellolib.c
